--- a/notebooks/n00_data_visualization.ipynb
+++ b/notebooks/n00_data_visualization.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Credit Score de Clientes - link do dataset: https://www.kaggle.com/datasets/parisrohan/credit-score-classification\n",
+    "## Contém informações sobre histórico bancário  mensal de pessoas fictícias.\n",
+    "## Etapa de limpeza do dado - Realizado por Vinicius Otoni da Silva - 2024/06\n",
+    "## Objetivo: Realizar uma breve visualização dos dados para realizar o tratamento no próximo Notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vinic\\AppData\\Local\\Temp\\ipykernel_14680\\2275389496.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\vinic\\AppData\\Local\\Temp\\ipykernel_10264\\2275389496.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('../data/d01_raw/train.csv')\n"
      ]
     }
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,18 +227,38 @@
        "</div>"
       ],
       "text/plain": [
-       "       Monthly_Inhand_Salary  Num_Bank_Accounts  Num_Credit_Card  Interest_Rate  Delay_from_due_date  Num_Credit_Inquiries  Credit_Utilization_Ratio  Total_EMI_per_month\n",
-       "count           84998.000000      100000.000000     100000.00000  100000.000000        100000.000000          98035.000000             100000.000000        100000.000000\n",
-       "mean             4194.170850          17.091280         22.47443      72.466040            21.068780             27.754251                 32.285173          1403.118217\n",
-       "std              3183.686167         117.404834        129.05741     466.422621            14.860104            193.177339                  5.116875          8306.041270\n",
-       "min               303.645417          -1.000000          0.00000       1.000000            -5.000000              0.000000                 20.000000             0.000000\n",
-       "25%              1625.568229           3.000000          4.00000       8.000000            10.000000              3.000000                 28.052567            30.306660\n",
-       "50%              3093.745000           6.000000          5.00000      13.000000            18.000000              6.000000                 32.305784            69.249473\n",
-       "75%              5957.448333           7.000000          7.00000      20.000000            28.000000              9.000000                 36.496663           161.224249\n",
-       "max             15204.633333        1798.000000       1499.00000    5797.000000            67.000000           2597.000000                 50.000000         82331.000000"
+       "       Monthly_Inhand_Salary  Num_Bank_Accounts  Num_Credit_Card  \\\n",
+       "count           84998.000000      100000.000000     100000.00000   \n",
+       "mean             4194.170850          17.091280         22.47443   \n",
+       "std              3183.686167         117.404834        129.05741   \n",
+       "min               303.645417          -1.000000          0.00000   \n",
+       "25%              1625.568229           3.000000          4.00000   \n",
+       "50%              3093.745000           6.000000          5.00000   \n",
+       "75%              5957.448333           7.000000          7.00000   \n",
+       "max             15204.633333        1798.000000       1499.00000   \n",
+       "\n",
+       "       Interest_Rate  Delay_from_due_date  Num_Credit_Inquiries  \\\n",
+       "count  100000.000000        100000.000000          98035.000000   \n",
+       "mean       72.466040            21.068780             27.754251   \n",
+       "std       466.422621            14.860104            193.177339   \n",
+       "min         1.000000            -5.000000              0.000000   \n",
+       "25%         8.000000            10.000000              3.000000   \n",
+       "50%        13.000000            18.000000              6.000000   \n",
+       "75%        20.000000            28.000000              9.000000   \n",
+       "max      5797.000000            67.000000           2597.000000   \n",
+       "\n",
+       "       Credit_Utilization_Ratio  Total_EMI_per_month  \n",
+       "count             100000.000000        100000.000000  \n",
+       "mean                  32.285173          1403.118217  \n",
+       "std                    5.116875          8306.041270  \n",
+       "min                   20.000000             0.000000  \n",
+       "25%                   28.052567            30.306660  \n",
+       "50%                   32.305784            69.249473  \n",
+       "75%                   36.496663           161.224249  \n",
+       "max                   50.000000         82331.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -454,15 +484,71 @@
        "</div>"
       ],
       "text/plain": [
-       "       ID Customer_ID     Month           Name   Age          SSN Occupation Annual_Income  Monthly_Inhand_Salary  Num_Bank_Accounts  Num_Credit_Card  Interest_Rate Num_of_Loan                                       Type_of_Loan  Delay_from_due_date Num_of_Delayed_Payment Changed_Credit_Limit  Num_Credit_Inquiries Credit_Mix Outstanding_Debt  Credit_Utilization_Ratio     Credit_History_Age Payment_of_Min_Amount  Total_EMI_per_month Amount_invested_monthly                 Payment_Behaviour     Monthly_Balance Credit_Score\n",
-       "0  0x1602   CUS_0xd40   January  Aaron Maashoh    23  821-00-0265  Scientist      19114.12            1824.843333                  3                4              3           4  Auto Loan, Credit-Builder Loan, Personal Loan,...                    3                      7                11.27                   4.0          _           809.98                 26.822620  22 Years and 1 Months                    No            49.574949       80.41529543900253   High_spent_Small_value_payments  312.49408867943663         Good\n",
-       "1  0x1603   CUS_0xd40  February  Aaron Maashoh    23  821-00-0265  Scientist      19114.12                    NaN                  3                4              3           4  Auto Loan, Credit-Builder Loan, Personal Loan,...                   -1                    NaN                11.27                   4.0       Good           809.98                 31.944960                    NaN                    No            49.574949      118.28022162236736    Low_spent_Large_value_payments  284.62916249607184         Good\n",
-       "2  0x1604   CUS_0xd40     March  Aaron Maashoh  -500  821-00-0265  Scientist      19114.12                    NaN                  3                4              3           4  Auto Loan, Credit-Builder Loan, Personal Loan,...                    3                      7                    _                   4.0       Good           809.98                 28.609352  22 Years and 3 Months                    No            49.574949         81.699521264648   Low_spent_Medium_value_payments   331.2098628537912         Good\n",
-       "3  0x1605   CUS_0xd40     April  Aaron Maashoh    23  821-00-0265  Scientist      19114.12                    NaN                  3                4              3           4  Auto Loan, Credit-Builder Loan, Personal Loan,...                    5                      4                 6.27                   4.0       Good           809.98                 31.377862  22 Years and 4 Months                    No            49.574949       199.4580743910713    Low_spent_Small_value_payments  223.45130972736786         Good\n",
-       "4  0x1606   CUS_0xd40       May  Aaron Maashoh    23  821-00-0265  Scientist      19114.12            1824.843333                  3                4              3           4  Auto Loan, Credit-Builder Loan, Personal Loan,...                    6                    NaN                11.27                   4.0       Good           809.98                 24.797347  22 Years and 5 Months                    No            49.574949      41.420153086217326  High_spent_Medium_value_payments  341.48923103222177         Good"
+       "       ID Customer_ID     Month           Name   Age          SSN Occupation  \\\n",
+       "0  0x1602   CUS_0xd40   January  Aaron Maashoh    23  821-00-0265  Scientist   \n",
+       "1  0x1603   CUS_0xd40  February  Aaron Maashoh    23  821-00-0265  Scientist   \n",
+       "2  0x1604   CUS_0xd40     March  Aaron Maashoh  -500  821-00-0265  Scientist   \n",
+       "3  0x1605   CUS_0xd40     April  Aaron Maashoh    23  821-00-0265  Scientist   \n",
+       "4  0x1606   CUS_0xd40       May  Aaron Maashoh    23  821-00-0265  Scientist   \n",
+       "\n",
+       "  Annual_Income  Monthly_Inhand_Salary  Num_Bank_Accounts  Num_Credit_Card  \\\n",
+       "0      19114.12            1824.843333                  3                4   \n",
+       "1      19114.12                    NaN                  3                4   \n",
+       "2      19114.12                    NaN                  3                4   \n",
+       "3      19114.12                    NaN                  3                4   \n",
+       "4      19114.12            1824.843333                  3                4   \n",
+       "\n",
+       "   Interest_Rate Num_of_Loan  \\\n",
+       "0              3           4   \n",
+       "1              3           4   \n",
+       "2              3           4   \n",
+       "3              3           4   \n",
+       "4              3           4   \n",
+       "\n",
+       "                                        Type_of_Loan  Delay_from_due_date  \\\n",
+       "0  Auto Loan, Credit-Builder Loan, Personal Loan,...                    3   \n",
+       "1  Auto Loan, Credit-Builder Loan, Personal Loan,...                   -1   \n",
+       "2  Auto Loan, Credit-Builder Loan, Personal Loan,...                    3   \n",
+       "3  Auto Loan, Credit-Builder Loan, Personal Loan,...                    5   \n",
+       "4  Auto Loan, Credit-Builder Loan, Personal Loan,...                    6   \n",
+       "\n",
+       "  Num_of_Delayed_Payment Changed_Credit_Limit  Num_Credit_Inquiries  \\\n",
+       "0                      7                11.27                   4.0   \n",
+       "1                    NaN                11.27                   4.0   \n",
+       "2                      7                    _                   4.0   \n",
+       "3                      4                 6.27                   4.0   \n",
+       "4                    NaN                11.27                   4.0   \n",
+       "\n",
+       "  Credit_Mix Outstanding_Debt  Credit_Utilization_Ratio  \\\n",
+       "0          _           809.98                 26.822620   \n",
+       "1       Good           809.98                 31.944960   \n",
+       "2       Good           809.98                 28.609352   \n",
+       "3       Good           809.98                 31.377862   \n",
+       "4       Good           809.98                 24.797347   \n",
+       "\n",
+       "      Credit_History_Age Payment_of_Min_Amount  Total_EMI_per_month  \\\n",
+       "0  22 Years and 1 Months                    No            49.574949   \n",
+       "1                    NaN                    No            49.574949   \n",
+       "2  22 Years and 3 Months                    No            49.574949   \n",
+       "3  22 Years and 4 Months                    No            49.574949   \n",
+       "4  22 Years and 5 Months                    No            49.574949   \n",
+       "\n",
+       "  Amount_invested_monthly                 Payment_Behaviour  \\\n",
+       "0       80.41529543900253   High_spent_Small_value_payments   \n",
+       "1      118.28022162236736    Low_spent_Large_value_payments   \n",
+       "2         81.699521264648   Low_spent_Medium_value_payments   \n",
+       "3       199.4580743910713    Low_spent_Small_value_payments   \n",
+       "4      41.420153086217326  High_spent_Medium_value_payments   \n",
+       "\n",
+       "      Monthly_Balance Credit_Score  \n",
+       "0  312.49408867943663         Good  \n",
+       "1  284.62916249607184         Good  \n",
+       "2   331.2098628537912         Good  \n",
+       "3  223.45130972736786         Good  \n",
+       "4  341.48923103222177         Good  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
