--- a/notebooks/n02_pipeline.ipynb
+++ b/notebooks/n02_pipeline.ipynb
@@ -2,37 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "import ETL\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vinic\\AppData\\Local\\Temp\\ipykernel_14880\\1828444649.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\vinic\\AppData\\Local\\Temp\\ipykernel_12084\\1161205273.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('../data/d01_raw/train.csv')\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv('../data/d01_raw/train.csv')\n",
-    "pd.set_option('display.max_columns', None)"
+    "pd.set_option('display.max_columns', None)\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +513,7 @@
        "9   484.5912142650067         Good  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +524,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   ID                        100000 non-null  object \n",
+      " 1   Customer_ID               100000 non-null  object \n",
+      " 2   Month                     100000 non-null  object \n",
+      " 3   Name                      90015 non-null   object \n",
+      " 4   Age                       100000 non-null  object \n",
+      " 5   SSN                       100000 non-null  object \n",
+      " 6   Occupation                100000 non-null  object \n",
+      " 7   Annual_Income             100000 non-null  object \n",
+      " 8   Monthly_Inhand_Salary     84998 non-null   float64\n",
+      " 9   Num_Bank_Accounts         100000 non-null  int64  \n",
+      " 10  Num_Credit_Card           100000 non-null  int64  \n",
+      " 11  Interest_Rate             100000 non-null  int64  \n",
+      " 12  Num_of_Loan               100000 non-null  object \n",
+      " 13  Type_of_Loan              88592 non-null   object \n",
+      " 14  Delay_from_due_date       100000 non-null  int64  \n",
+      " 15  Num_of_Delayed_Payment    92998 non-null   object \n",
+      " 16  Changed_Credit_Limit      100000 non-null  object \n",
+      " 17  Num_Credit_Inquiries      98035 non-null   float64\n",
+      " 18  Credit_Mix                100000 non-null  object \n",
+      " 19  Outstanding_Debt          100000 non-null  object \n",
+      " 20  Credit_Utilization_Ratio  100000 non-null  float64\n",
+      " 21  Credit_History_Age        90970 non-null   object \n",
+      " 22  Payment_of_Min_Amount     100000 non-null  object \n",
+      " 23  Total_EMI_per_month       100000 non-null  float64\n",
+      " 24  Amount_invested_monthly   95521 non-null   object \n",
+      " 25  Payment_Behaviour         100000 non-null  object \n",
+      " 26  Monthly_Balance           98800 non-null   object \n",
+      " 27  Credit_Score              100000 non-null  object \n",
+      "dtypes: float64(4), int64(4), object(20)\n",
+      "memory usage: 21.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,40 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:72: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  X_transformed[self.column_name].fillna(\"Not Specified\", inplace=True)\n",
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:88: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  X_transformed[self.column_name].fillna(0, inplace=True)\n",
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:89: UserWarning: Unable to sort modes: '<' not supported between instances of 'int' and 'str'\n",
+      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:137: UserWarning: Unable to sort modes: '<' not supported between instances of 'int' and 'str'\n",
       "  mode_num_delayed_payment = X_transformed.groupby(\"Customer_ID\")[self.column_name].apply(lambda x: x.mode().iloc[0])\n",
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:89: UserWarning: Unable to sort modes: '<' not supported between instances of 'str' and 'int'\n",
-      "  mode_num_delayed_payment = X_transformed.groupby(\"Customer_ID\")[self.column_name].apply(lambda x: x.mode().iloc[0])\n",
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:179: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  X_transformed[column_name] = X_transformed.groupby('Customer_ID')[column_name].transform(lambda x: x.bfill().ffill())\n",
-      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:88: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  X_transformed[self.column_name].fillna(0, inplace=True)\n"
+      "c:\\Users\\vinic\\OneDrive\\Área de Trabalho\\DataEng\\CreditScore\\CreditScoreDataset\\notebooks\\ETL.py:137: UserWarning: Unable to sort modes: '<' not supported between instances of 'str' and 'int'\n",
+      "  mode_num_delayed_payment = X_transformed.groupby(\"Customer_ID\")[self.column_name].apply(lambda x: x.mode().iloc[0])\n"
      ]
     }
    ],
@@ -593,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1094,13 +1124,66 @@
        "9     Standard                 1994-05             2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "example.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 30 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   ID                        100000 non-null  object \n",
+      " 1   Customer_ID               100000 non-null  object \n",
+      " 2   Month                     100000 non-null  object \n",
+      " 3   Name                      100000 non-null  object \n",
+      " 4   Age                       100000 non-null  int64  \n",
+      " 5   SSN                       100000 non-null  object \n",
+      " 6   Occupation                100000 non-null  object \n",
+      " 7   Annual_Income             100000 non-null  int64  \n",
+      " 8   Monthly_Inhand_Salary     100000 non-null  float64\n",
+      " 9   Num_Bank_Accounts         100000 non-null  int64  \n",
+      " 10  Num_Credit_Card           100000 non-null  int64  \n",
+      " 11  Interest_Rate             100000 non-null  int64  \n",
+      " 12  Num_of_Loan               100000 non-null  int64  \n",
+      " 13  Type_of_Loan              100000 non-null  object \n",
+      " 14  Delay_from_due_date       100000 non-null  int64  \n",
+      " 15  Num_of_Delayed_Payment    100000 non-null  float64\n",
+      " 16  Changed_Credit_Limit      100000 non-null  int64  \n",
+      " 17  Num_Credit_Inquiries      100000 non-null  float64\n",
+      " 18  Credit_Mix                100000 non-null  object \n",
+      " 19  Outstanding_Debt          100000 non-null  int64  \n",
+      " 20  Credit_Utilization_Ratio  100000 non-null  float64\n",
+      " 21  Credit_History_Age        100000 non-null  object \n",
+      " 22  Payment_of_Min_Amount     100000 non-null  int64  \n",
+      " 23  Total_EMI_per_month       100000 non-null  float64\n",
+      " 24  Amount_invested_monthly   100000 non-null  int64  \n",
+      " 25  Payment_Behaviour         100000 non-null  object \n",
+      " 26  Monthly_Balance           100000 non-null  float64\n",
+      " 27  Credit_Score              100000 non-null  object \n",
+      " 28  Credit_History_Age_Date   100000 non-null  object \n",
+      " 29  Number_Month              100000 non-null  int64  \n",
+      "dtypes: float64(6), int64(12), object(12)\n",
+      "memory usage: 22.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "example.info()"
    ]
   }
  ],
